--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -283,7 +283,9 @@ input, select, textarea {
 		text-align: center;
 	}
 	.picc{
-		margin-left:275px; 
+		margin:auto;
+		max-width: 50%;
+		max-height: 50%; 
 	}
 	.align-right {
 		text-align: right;
